--- a/app/styles/base.scss
+++ b/app/styles/base.scss
@@ -1,15 +1,21 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700);
+* {
+  box-sizing: border-box;
+}
 
 html {
   font-size: 16px;
 }
+
 ul, li {
 	margin: 0;
 	padding: 0;
 }
+
 li {
 	list-style: none;
 }
+
 body {
   font-family: 'Roboto Condensed', sans-serif;
 }
